tests/errors/mixed_tabs_spaces.ki
if 1 < 2:
	var a = 1
        var b = 2
